add link trajectory to study service